--- a/eclepens.html
+++ b/eclepens.html
@@ -148,9 +148,9 @@ canvas{
 	Potree.settings.showBoundingBox = false;
 
 
-	let measure = new PointMeasure();
-	measure.markers.push(new Vector3(50, -250, 12));
-	potree.measure.measures.push(measure);
+	//let measure = new PointMeasure();
+	//measure.markers.push(new Vector3(50, -250, 12));
+	//potree.measure.measures.push(measure);
 
 	Potree.events.onFrameStart(() => {
 		let report = Potree.renderer.createResourceReport();
