--- a/extra_materials_terrasolid_sitn.html
+++ b/extra_materials_terrasolid_sitn.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<meta http-equiv="origin-trial" content="AmgwKkyLeQetn/dhGSsOlfOa/QLp1JOUgqyYSeFTadHtP83gkgHrDEj62CN//MgSjDbVwOY/LAr4qg/XyU2YYwMAAABdeyJvcmlnaW4iOiJodHRwczovL3BvdHJlZS5vcmc6NDQzIiwiZmVhdHVyZSI6IldlYkdQVSIsImV4cGlyeSI6MTY3NTIwOTU5OSwiaXNTdWJkb21haW4iOnRydWV9">
 <link rel="stylesheet" href="resources/potree.css">
 </head>
 <body style="padding: 0; margin: 0">
@@ -55,11 +54,6 @@
 	let elPotree = document.getElementById("potree");
 	let potree = await Potree.init(canvas);
 	let {scene, controls} = potree;
-	// installToolbar(potree.renderer.canvas, potree);
-
-	// window.Potree = {
-	// 	version: "abc",
-	// };
 
 	window.sidebar = installSidebar(elPotree, potree);
 
@@ -71,7 +65,6 @@
 	Potree.settings.dilateEnabled = false;
 	Potree.settings.hqsEnabled = true;
 
-
 	// default, if not overriden later on
 	controls.set({
 		position: [-19.0, 13.6, 12.2],
@@ -79,87 +72,19 @@
 	});
 
 	Potree.settings.pointBudget = 4_000_000;
-	// Potree.settings.pointBudget = 30_000;
-	// Potree.settings.attribute = "classification";
-
 	Potree.settings.attribute = "rgba";
 	Potree.settings.pointSize = 3;
 	Potree.settings.splatType = SplatType.POINTS;
-	// Potree.settings.pointBudget = 30085;
 
-	
-	// // CopcLoader.load("./sofi.copc.laz").then(pointcloud => {
-	// CopcLoader.load("./autzen-classified.copc.laz").then(pointcloud => {
-
-	// 	window.pointcloud = pointcloud;
-	// 	pointcloud.name = "Autzen Stadium";
-
-	// 	let min = new Vector3(...pointcloud.loader.header.min);
-	// 	let max = new Vector3(...pointcloud.loader.header.max);
-
-	// 	let center = min.add(max).multiplyScalar(0.5);
-	// 	let size = min.distanceTo(max);
-		
-	// 	controls.set({
-	// 		yaw: -0.2,
-	// 		pitch: 0.8,
-	// 		radius: 1.5 * size,
-	// 		pivot: center,
-	// 	});
-
-	// 	scene.add(scene.root, pointcloud);
-	// });
-	
-
-	// Potree.load("./resources/pointclouds/heidentor/metadata.json", {name: "CA13"}).then(pointcloud => {
-	// 	pointcloud.name = "Heidentor";
-	// 	scene.root.children.push(pointcloud);
-	// });
-
-	// loadGLB("./resources/models/australia_gas.glb", {
-	// 	onStart: (node) => {
-	// 		node.rotation.makeIdentity();
-	// 		node.rotation.rotate(1.2, {x: 1, y: 0, z: 0});
-	// 		node.rotation.rotate(-0.1, {x: 0, y: 1, z: 0});
-	// 		node.scale.set(2, 2, 2);
-	// 		node.position.set(-25, -10, 10);
-
-	// 		node.name = "australia_gas";
-
-	// 		scene.root.children.push(node);
-	// 	}, onNode: (mesh) => {
-	// 		console.log(mesh);
-	// 	}
-	// });
-
-	// Potree.load("./resources/models/ruins.glb").then(model => {
-
-	// 	console.log(model);
-
-	// 	// scene.root.children.push(model);
-
-	// });
-
-	// Potree.load("./resources/pointclouds/heidentor/metadata.json").then(pointcloud => {
-
-	// 	scene.root.children.push(pointcloud);
-
-	// 	controls.set({
-	// 		position: [20, 20, 20], 
-	// 		pivot: [0, 0, 0]
-	// 	});
-
-	// });
-
-	// Potree.load("./resources/pointclouds/CA13/metadata.json").then(pointcloud => {
-	Potree.load("./resources/pointclouds/lidar2022_las14_extra_attributes.las_converted/metadata.json").then(pointcloud => {
+	// Potree.load("./resources/pointclouds/lidar2022_las14_extra_attributes/metadata.json").then(pointcloud => {
+	Potree.load("https://users.cg.tuwien.ac.at/mschuetz/permanent/potree-next/resources/lidar2022_las14_extra_attributes/metadata.json").then(pointcloud => {
 
 		window.pointcloud = pointcloud;
 		pointcloud.name = "sitn extra attributes";
 
 		controls.set({
-			position: [2562044.2, 1204892.3, 809.3],
-			pivot:    [2562237.4, 1205156.4, 467.7]
+			position: [2562190.1, 1204847.8, 695.2],
+			pivot:    [2562251.5, 1205166.7, 444.8]
 		});
 
 		let material = pointcloud.material;
@@ -171,57 +96,6 @@
 
 		scene.root.children.push(pointcloud);
 	});
-
-
-
-
-	// Potree.load("./resources/pointclouds/aerial_lidar2019_2524_1197_laz14_dip/metadata.json").then(pointcloud => {
-
-	// 	window.pointcloud = pointcloud;
-	// 	pointcloud.name = "sitn dip";
-
-	// 	controls.set({
-	// 		position: [2524961.6, 1198245.8, 1646.2], 
-	// 		pivot: [2524503.6, 1197488.7, 1098.6]
-	// 	});
-
-	// 	scene.root.children.push(pointcloud);
-	// });
-
-
-	// Potree.load("./nocommit/F_pointclouds/CA13_morro_bay/morro_bay.las_converted/metadata.json").then(pointcloud => {
-
-	// 	window.pointcloud = pointcloud;
-	// 	pointcloud.name = "CA13";
-
-	// 	controls.set({
-	// 		position: [694616.5, 3916084.9, 216.0], 
-	// 		pivot: [694733.8, 3916401.9, 19.8]
-	// 	});
-
-	// 	scene.root.children.push(pointcloud);
-	// });
-
-	let origin = new Vector3(0, 0, 0);
-	let X = new Vector3(10, 0, 0);
-	let Y = new Vector3(0, 10, 0);
-	let Z = new Vector3(0, 0, 10);
-	let red = new Vector3(255, 0, 0);
-	let green = new Vector3(0, 255, 0);
-	let blue = new Vector3(0, 0, 255);
-
-	import {sphere} from "./src/modules/geometries/sphere.js";
-
-	potree.onUpdate( () => {
-
-		// potree.renderer.drawLine(origin, X, red);
-		// potree.renderer.drawLine(origin, Y, green);
-		// potree.renderer.drawLine(origin, Z, blue);
-
-		// potree.renderer.drawSphere(origin, 2);
-	});
-
-
 
 </script>
 
