--- a/vienna_city_center.html
+++ b/vienna_city_center.html
@@ -95,8 +95,8 @@
 
 
 	// PotreeLoader.load("./resources/pointclouds/wien_innenstadt/metadata.json").then(pointcloud => {
-	// PotreeLoader.load("https://users.cg.tuwien.ac.at/mschuetz/permanent/potree-next/resources/wien_innenstadt/metadata.json").then(pointcloud => {
-	PotreeLoader.load("https://potree.org/pointclouds/wien_innenstadt_converted/metadata.json").then(pointcloud => {
+	PotreeLoader.load("https://users.cg.tuwien.ac.at/mschuetz/permanent/potree-next/resources/wien_innenstadt/metadata.json").then(pointcloud => {
+	// PotreeLoader.load("https://potree.org/pointclouds/wien_innenstadt_converted/metadata.json").then(pointcloud => {
 		console.log(pointcloud);
 
 		scene.root.children.push(pointcloud);
